@@ -51,8 +51,11 @@ local function spawn_entity(entity, relative_position, center, surface, extra_op
   end
   if extra_options.items then
     local items = {}
-    for name, count in pairs(extra_options.items) do
-      items[name] = expressions.number(count, vars)
+    for name, count_expression in pairs(extra_options.items) do
+      local count = expressions.number(count_expression, vars)
+      if count > 0 then
+        items[name] = count
+      end
     end
     util.safe_insert(e, items)
   end
