@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed inserting items with 0 count.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2021-02-15
